--- a/composeApp/src/androidMain/res/values-v31/themes.xml
+++ b/composeApp/src/androidMain/res/values-v31/themes.xml
@@ -2,9 +2,8 @@
 <resources>
     <!-- Splash Screen Theme for Android 12+ -->
     <style name="Theme.Katiba.Splash" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/ic_launcher_background</item>
+        <item name="windowSplashScreenBackground">@color/splash_background</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
-        <item name="android:windowSplashScreenBrandingImage">@mipmap/ic_launcher</item>
         <item name="postSplashScreenTheme">@style/Theme.Katiba</item>
     </style>
 </resources>
