--- a/composeApp/src/androidMain/res/values/ic_launcher_background.xml
+++ b/composeApp/src/androidMain/res/values/ic_launcher_background.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#1E88E5</color>
+    <color name="ic_launcher_background">#00000000</color>
+    <color name="splash_background">#FFFFFF</color>
 </resources>
 
